# AbilityStoneCalculator

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpck.json
AbilityStoneCalculator/: AbilityStoneCalculator.cpp  CMakeLists.txt  Calculator.cpp  Calculator.h
